--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 apply plugin:'java'
+apply plugin:'war'
+apply plugin:'jetty'
 apply plugin:'idea'
 
 version = 0.1
@@ -8,4 +10,22 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.manning.gia.todo.ToDoApp'
     }
+}
+
+jettyRun {
+    httpPort=8080
+    contextPath='todo'
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    providedCompile 'javax.servlet:servlet-api:2.5'
+    runtime 'javax.servlet:jstl:1.1.2'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion='2.13'
 }
